adjust max width of activity container to prevent ugly wrapping

--- a/static/main.css
+++ b/static/main.css
@@ -123,7 +123,7 @@ a:hover {
 .activity-container {
     margin-bottom: 1em;
     margin-right: 1em;
-    max-width: 40em;
+    max-width: 38em;
     display: inline-block;
     vertical-align: top;
 }
